# agent-pwn

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agent_pwn/: __init__.py  cli.py  utils.py
src/agent_pwn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/agent_pwn/detect/: __init__.py  scanner.py
src/agent_pwn/entry/: __init__.py  claude_md.py  copilot.py  cursorrules.py
src/agent_pwn/escalate/: __init__.py  mcp_server.py
src/agent_pwn/exfil/: __init__.py  git_channels.py  tool_channels.py
src/agent_pwn/hijack/: __init__.py  comment_chain.py  cross_context.py  hex_metadata.py  unicode_stego.py
src/agent_pwn/lateral/: __init__.py  crewai.py  delegation.py  langgraph.py
src/agent_pwn/persist/: __init__.py  memory.py  worm.py
tests/: conftest.py  test_cli_compat.py  test_detect.py  test_entry.py  test_hijack.py
